<resources>
    <string name="app_name">DroidGit</string>
    <string name="add_user_fullname">Full name</string>
    <string name="add_user_email">E-Mail</string>
    <string name="add_user_username">Username</string>
    <string name="add_user_password">Password</string>
    <string name="add_user_publickey">Public Key</string>
    <string name="add_repository_name">Name</string>
    <string name="add_repository_mapping">Mapping</string>
    <string name="add_repository_description">Description</string>
    <string name="add_user_title">Add new user</string>
    <string name="add_user_activate">Activate user</string>
    <string name="add_repository_title">Add repository</string>
    <string name="click_to_disable">Click to disable</string>
    <string name="click_to_enable">Click to enable</string>
    <string name="settings_git_repositories_directory">Git repositories directory</string>
    <string name="settings_http_server_port">HTTP server port</string>
	<string name="repositories_no_repositories_label">No repositories</string>
	<string name="users_no_users_label">No users</string>
	<string name="home_start">Start</string>
	<string name="home_stop">Stop</string>
	<string name="statusbar_notification">StatusBar notification</string>
	<string name="autostart">Autostart</string>
	<string name="autostart_summary_on">Autostart on WiFi ON</string>
	<string name="autostart_summary_off">Autostart on WiFi ON</string>
	<string name="autostop">Autostop</string>
	<string name="autostop_summary_on">Autostop on WiFi OFF</string>
	<string name="autostop_summary_off">Autostop on WiFi OFF</string>
	<string name="wifi_connected_to">WiFi connected</string>
	<string name="network_ready">Network Ready</string>
	<string name="wifi_not_connected">WiFi is NOT connected</string>
	<string name="no_repositories">No repositories</string>
	<string name="add_permission">Add permission</string>
	<string name="no_permissions">No permissions</string>
	<string name="permissions">Permissions</string>
	<string name="edit">Edit</string>
	<string name="activate">Public</string>
	<string name="deactivate">Private</string>
	<string name="archive_action">Archive</string>
	<string name="unarchive_action">Unarchive</string>
	<string name="delete">Delete</string>
	<string name="repository_details">Repository details</string>
	<string name="no_users">No users</string>
	<string name="add_repository_activate">Public</string>
	<string name="server_settings">Server Settings</string>
	<string name="general_settings">General Settings</string>
    <string name="splash_subtitle">Git server for Android</string>
    <string name="server_log_ready">Server Log: Ready...</string>
    <string name="about_support_title">About &amp; Donate</string>
    <string name="donate_current_maintainer_title">Developer</string>
    <string name="donate_subscription_description">Support the ongoing development and server maintenance.</string>
    <string name="donate_button_alipay">AliPay</string>
    <string name="donate_button_wechat">WeChat Pay</string>
    <string name="about_opensource_title">Open Source</string>
    <string name="about_current_project_label">Project Homepage:</string>
    <string name="language_settings">Language Settings</string>
    <string name="choose_language">Choose Language</string>
</resources>